# tissue-model-analysis-tools

./: .gitattributes  .gitignore  .gitmodules  LICENSE.txt  README.md  TODO.md  dev_paths_example.txt  environment.yml  environment_gpu.yml  environment_hpc.yml  environment_mac.yml  environment_mac2.yml  environment_mac_arm64_miniforge.yml  environment_windows.yml  environment_windows_no_gpu.yml  requirements.txt  run_cluster_jupyter.sh  setup.cfg  setup.py  temp_test.py  test.txt
conda_environments/: environment.yml  environment_colab.yml  environment_linux.yml  environment_linux_cpu.yml  environment_linux_gpu.yml  environment_mac.yml  environment_windows.yml
config/: branching_computation_with_well_boundaries.json  cell_area_computation_with_well_boundaries.json  default_branching_computation.json  default_cell_area_computation.json  default_inv_depth_computation.json  default_invasion_depth_computation.json
figure_generation/: branching_residuals.py  cell_area_accuracy.py  invasion_confusion_matrix.py
figures/: branching_residuals.py  cell_area_accuracy.py  invasion_confusion_matrix.py
fl_tissue_model_tools/: cli.py  colored_messages.py  configure.py  data_prep.py  defs.py  dev_config.py  dmtgraph.py  exceptions.py  helper.py  models.py  models_util.py  preprocessing.py  script_util.py  smooth_tiled_predictions.py  success_fail_messages.py  topology.py  transforms.py  well_mask_generation.py  zstacks.py
gui/: pyinstaller_build.spec  tmat.py
model_training/: description.txt  invasion_depth_best_hp.json  invasion_depth_hp_space.json  (+1 more)
notebooks/: temp.ipynb  (+32 more)
(+102 files in other folders)
