[metadata]
name = fl_tissue_model_tools
version = 1.0.4
author = Fogg Lab

[options]
packages = fl_tissue_model_tools
include_package_data = True

[options.package_data]
fl_tissue_model_tools = package.cfg

[options.entry_points]
console_scripts =
    fl-tissue-model-tools = fl_tissue_model_tools.cli:main
    tmat = fl_tissue_model_tools.cli:main
